--- a/app/build.gradle
+++ b/app/build.gradle
@@ -23,11 +23,26 @@ android {
 }
 
 dependencies {
+    //DEFAULT
     implementation fileTree(dir: 'libs', include: ['*.jar'])
     implementation"org.jetbrains.kotlin:kotlin-stdlib-jdk7:$kotlin_version"
-    implementation 'com.android.support:appcompat-v7:28.0.0'
     implementation 'com.android.support.constraint:constraint-layout:1.1.3'
-    implementation 'com.android.support:design:28.0.0'
+
+    //Bibliotecas de diseño
+    implementation "com.android.support:appcompat-v7:$android_version"
+    implementation "com.android.support:customtabs:$android_version"
+    implementation "com.android.support:support-v4:$android_version"
+    implementation "com.android.support:design:$android_version"
+    implementation "com.android.support:cardview-v7:$android_version"
+    implementation "com.android.support:recyclerview-v7:$android_version"
+
+
+    //QR
+    implementation 'com.google.android.gms:play-services-vision:17.0.2'
+    implementation "com.github.KingsMentor:MobileVisionBarcodeScanner:2.0.0"
+
+
+    //TESTING
     testImplementation 'junit:junit:4.12'
     androidTestImplementation 'com.android.support.test:runner:1.0.2'
     androidTestImplementation 'com.android.support.test.espresso:espresso-core:3.0.2'
