--- a/build.gradle
+++ b/build.gradle
@@ -1,7 +1,8 @@
 // Top-level build file where you can add configuration options common to all sub-projects/modules.
 
 buildscript {
-    ext.kotlin_version = '1.3.21'
+    ext.kotlin_version  = '1.3.31'
+    ext.android_version = '28.0.0'
     repositories {
         google()
         jcenter()
@@ -19,7 +20,8 @@ allprojects {
     repositories {
         google()
         jcenter()
-        
+
+        maven { url "https://jitpack.io" }
     }
 }
 
